.archive/clusters/homelab-1/.network-policies/allow-egress-to-minio/destination/network-policy.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: allow-ingress-to-minio
spec:
  podSelector:
    matchLabels:
      app.kubernetes.io/name: "minio-app"
  policyTypes:
    - Ingress
  ingress:
    - from:
        - podSelector:
            matchLabels:
              networking/allow-egress-to-minio: "true"
      ports:
        - protocol: TCP
          port: 5432
